added spherical intersection tools to ci and packaging

--- a/.fcgitlab-ci.yml
+++ b/.fcgitlab-ci.yml
@@ -27,6 +27,8 @@ windows:
     - strip cli/gigamesh-clean.exe
     - strip cli/gigamesh-info.exe
     - strip cli/gigamesh-borders.exe
+    - strip cli/spherical_intersection_cli/gigamesh-featurevectors-sl.exe
+    - strip cli/spherical_intersection_cli/gigamesh-sphere-profiles.exe
 
   artifacts:
     name: "gigamesh_windows"
@@ -37,6 +39,8 @@ windows:
       - build/cli/gigamesh-clean.exe
       - build/cli/gigamesh-info.exe
       - build/cli/gigamesh-borders.exe
+      - build/cli/spherical_intersection_cli/gigamesh-featurevectors-sl.exe
+      - build/cli/spherical_intersection_cli/gigamesh-sphere-profiles.exe
     expire_in: 4 hours
 
 ubuntu bionic:
@@ -64,6 +68,8 @@ ubuntu bionic:
     - strip cli/gigamesh-clean
     - strip cli/gigamesh-info
     - strip cli/gigamesh-borders
+    - strip cli/spherical_intersection_cli/gigamesh-featurevectors-sl
+    - strip cli/spherical_intersection_cli/gigamesh-sphere-profiles
 
   artifacts:
     name: "gigamesh_bionic"
@@ -74,6 +80,8 @@ ubuntu bionic:
       - build/cli/gigamesh-clean
       - build/cli/gigamesh-info
       - build/cli/gigamesh-borders
+      - build/cli/spherical_intersection_cli/gigamesh-featurevectors-sl
+      - build/cli/spherical_intersection_cli/gigamesh-sphere-profiles
     expire_in: 4 hours
 
 manjaro arch:
@@ -98,6 +106,8 @@ manjaro arch:
     - strip cli/gigamesh-clean
     - strip cli/gigamesh-info
     - strip cli/gigamesh-borders
+    - strip cli/spherical_intersection_cli/gigamesh-featurevectors-sl
+    - strip cli/spherical_intersection_cli/gigamesh-sphere-profiles
 
   artifacts:
     name: "gigamesh_arch_manjaro"
@@ -108,6 +118,8 @@ manjaro arch:
       - build/cli/gigamesh-clean
       - build/cli/gigamesh-info
       - build/cli/gigamesh-borders
+      - build/cli/spherical_intersection_cli/gigamesh-featurevectors-sl
+      - build/cli/spherical_intersection_cli/gigamesh-sphere-profiles
       - build/tests/gigameshCore_tests
     expire_in: 4 hours
 
