--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ string(STRIP "${COMP_GITHEAD}" COMP_GITHEAD)
 execute_process(COMMAND git log -1 --format=%ci
                 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                 OUTPUT_VARIABLE VERSION_PACKAGE)
-set(COMP_EDIT IWR\ FreeWare)
+set(COMP_EDIT IWR\ Open\ Source)
 string(STRIP "${VERSION_PACKAGE}" VERSION_PACKAGE)
 string(SUBSTRING "${VERSION_PACKAGE}" 2 9 VERSION_PACKAGE)
 string(REPLACE "-" "" VERSION_PACKAGE "${VERSION_PACKAGE}")
