--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SOURCES_CORE mesh/geodentry.cpp
 	mesh/userinteraction.cpp
 	mesh/showprogress.cpp
 	mesh/printbuildinfo.cpp
+	mesh/compfeaturevecs.cpp
 	mesh/polyline.cpp
 	mesh/polyedge.cpp
 	mesh/plane.cpp
@@ -91,6 +92,7 @@ set(PUBLIC_HEADERS_CORE ${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/printbuildi
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/matrix4d.h
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/voxelfilter25d.h
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/meshinfodata.h
+						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/compfeaturevecs.h
 						)
 
 add_library(gigameshCore STATIC ${SOURCES_CORE} ${HEADERS_CORE} ${PUBLIC_HEADERS_CORE})
