--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -28,6 +28,7 @@ set(SOURCES_CORE mesh/geodentry.cpp
 	mesh/meshinfodata.cpp
 	mesh/mesh.cpp
 	mesh/ellipsedisc.cpp
+	mesh/wedgeextraction.cpp
 	mesh/MeshIO/MeshReader.cpp
 	mesh/MeshIO/MeshWriter.cpp
 	mesh/MeshIO/ModelMetaData.cpp
@@ -66,6 +67,7 @@ set(PUBLIC_HEADERS_CORE ${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/printbuildi
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/logging/Logging.h
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/logging/Logger.h
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/mesh.h
+						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/wedgeextraction.h
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/geodentry.h
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/bitflagarray.h
 						${CMAKE_CURRENT_SOURCE_DIR}/include/GigaMesh/mesh/primitive.h
