--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,8 +8,6 @@ image:
   - macOS
   - Ubuntu
 
-
-
 for:
 -
   matrix:
@@ -40,7 +38,7 @@ for:
   after_build:
   - windeployqt install/bin/gigamesh.exe
   - mv install GigaMesh
-  - ls tests\Release
+  - ps: cp C:\OpenSSL-v111-Win64\bin\*.dll install\bin
   - cd ..
   test_script:
   - .\build\tests\Release\gigameshCore_tests.exe -o test_reportWin.xml -r junit & exit 0
