--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,9 +14,12 @@ for:
     only:
       - image: Ubuntu
   install:
+  - export QTDIR="$HOME/Qt/latest"
+  - export PATH="$QTDIR/bin:$PATH"
+  - export QT_SELECT=qt5
   - sudo apt-get update -qq
   - sudo apt-get -y install build-essential libtiff5-dev
-  - sudo apt-get -y install qtbase5-dev libqt5opengl5-dev libgl-dev g++-8
+  - sudo apt-get -y install libgl-dev g++-8
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 90 --slave /usr/bin/g++ g++ /usr/bin/g++-8 --slave /usr/bin/gcov gcov /usr/bin/gcov-8
   after_build:
   - mv install GigaMesh
