--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,8 +14,8 @@ for:
     only:
       - image: Ubuntu
   install:
-  - export QTDIR="$HOME/Qt/latest"
-  - export PATH="$QTDIR/bin:$PATH"
+  - export Qt5_DIR="$HOME/Qt/latest"
+  - export PATH="$Qt5_DIR/bin:$PATH"
   - export QT_SELECT=qt5
   - sudo apt-get update -qq
   - sudo apt-get -y install build-essential libtiff5-dev
