gns commandline tool

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -4,6 +4,9 @@ cmake_minimum_required(VERSION 3.10)
 add_executable(gigamesh-tolegacy gigamesh-tolegacy.cpp)
 target_link_libraries(gigamesh-tolegacy PRIVATE gigameshCore)
 
+add_executable(gigamesh-gnsphere gigamesh-gnsphere.cpp)
+target_link_libraries(gigamesh-gnsphere PRIVATE gigameshCore)
+
 add_executable(gigamesh-clean gigamesh-clean.cpp)
 target_link_libraries(gigamesh-clean PRIVATE gigameshCore psalm)
 target_compile_options(gigamesh-clean PRIVATE -DLIBPSALM)
@@ -25,6 +28,7 @@ install(TARGETS gigamesh-tolegacy
                 gigamesh-info
                 gigamesh-featurevectors
                 gigamesh-borders
+                gigamesh-gnsphere
         DESTINATION bin)
 
 
