initial implementation of CLI gigamesh-meshsplit

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -7,6 +7,9 @@ target_link_libraries(gigamesh-tolegacy PRIVATE gigameshCore)
 add_executable(gigamesh-gnsphere gigamesh-gnsphere.cpp)
 target_link_libraries(gigamesh-gnsphere PRIVATE gigameshCore)
 
+add_executable(gigamesh-meshsplit gigamesh-meshsplit.cpp)
+target_link_libraries(gigamesh-meshsplit PRIVATE gigameshCore)
+
 add_executable(gigamesh-clean gigamesh-clean.cpp)
 target_link_libraries(gigamesh-clean PRIVATE gigameshCore psalm)
 target_compile_options(gigamesh-clean PRIVATE -DLIBPSALM)
