add qt5 cmake path to fcgitlab-ci.yml and gitlab-ci.yml

--- a/.fcgitlab-ci.yml
+++ b/.fcgitlab-ci.yml
@@ -52,6 +52,7 @@ manjaro arch:
    - pacman -Sy
    - pacman -S gcc glibc cmake boost unzip qtcreator make git libffi --noconfirm
   script:
+    - export PATH="$Qt5_DIR/bin:$PATH"
     - export QT_SELECT=qt5
 
     # build gigamesh
