--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,9 +56,9 @@ manjaro arch:
   before_script: 
    - pacman -Sy
    - pacman -S gcc glibc cmake boost unzip qtcreator make git libffi --noconfirm
-   - pacman -Ss qt5-base
-   - pacman -Ss qt5-declarative
   script:
+    - whereis Qt5Config.cmake
+    - whereis qt5-config.cmake
     - export QT_SELECT=qt5
 
     # build gigamesh
