test to find QT5 Path in gitlab CI

--- a/.fcgitlab-ci.yml
+++ b/.fcgitlab-ci.yml
@@ -52,10 +52,8 @@ manjaro arch:
    - pacman -Sy
    - pacman -S gcc glibc cmake boost unzip qtcreator make git libffi --noconfirm
   script:
-    - whereis Qt5Config.cmake
-    - whereis qt5-config.cmake
-    - whereis Qt6Config.cmake
-    - whereis qt6-config.cmake
+    - export Qt5_DIR="usr/share/qtcreator/qml/qmlpuppet/mockfiles/qt5"
+    - export PATH="$Qt5_DIR/bin:$PATH"
     - export QT_SELECT=qt5
 
     # build gigamesh
