--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -13,8 +13,8 @@ export QT_SELECT := qt5
 	# --parallel for compiling multicore
 	dh $@ --parallel --buildsystem=cmake
 
-override_dh_auto_configure:
-	dh_auto_configure -- -DCMAKE_CXX_COMPILER=g++-8 -DCMAKE_C_COMPILER=gcc-8 -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles"
+#override_dh_auto_configure:
+#	dh_auto_configure -- -DCMAKE_CXX_COMPILER=g++-8 -DCMAKE_C_COMPILER=gcc-8 -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles"
 
 #override_dh_auto_build:
 #	make -j CC=gcc-8 CXX=g++-8 LINK=g++-8
