--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -55,7 +55,7 @@ for:
   install:
   #- brew update > /dev/null
   #- brew install qt5
-  - chmod -R 755 /usr/local/opt/qt5/*
+  #- chmod -R 755 /usr/local/opt/qt5/*
   - export QTDIR="$HOME/Qt/5.15.2/clang_64/bin"
   - export PATH="$QTDIR/bin:$PATH"
   - export QT_SELECT=qt5
