--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -56,7 +56,7 @@ for:
   #- brew update > /dev/null
   #- brew install qt5
   #- chmod -R 755 /usr/local/opt/qt5/*
-  - export Qt5_DIR="$HOME/Qt/5.15.2"
+  - export Qt5_DIR="$HOME/Qt/5.15.2/clang_64/bin"
   - export QTDIR="$HOME/Qt/5.15.2/clang_64/bin"
   - export PATH="$QTDIR/bin:$PATH"
   - export QT_SELECT=qt5
