--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,7 @@ manjaro arch:
   # install the necessary build tools when needed
   before_script: 
    - pacman -Sy
-   - pacman -S gcc glibc cmake boost unzip qtcreator make git libffi --noconfirm
+   - pacman -S gcc glibc cmake boost unzip qtcreator qt5-base make git libffi --noconfirm
   script:
     - export Qt5_DIR="$HOME/Qt/latest/gcc_64"
     - export PATH="$Qt5_DIR/bin:$PATH"
