fixed some static QRegularExpression warnings; commented out system check for OpenGL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ set(CPACK_SOURCE_STRIP_FILES TRUE)
 set(CPACK_STRIP_FILES "bin/gigamesh;bin/gigamesh-tolegacy;bin/gigamesh-clean;bin/gigamesh-info;bin/gigamesh-featurevectors;bin/gigamesh-borders")
 
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Hubert Mara <hubert.mara@iwr.uni-heidelberg.de>")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.14), libgcc1 (>= 1:3.0), qtbase6-dev(>= 5.5),libqt6core5a (>= 5), libqt6gui5 (>= 5) | libqt6gui5-gles (>= 5), libqt6opengl5 (>= 5) | libqt6opengl5-gles (>= 5), libstdc++6 (>= 5), libtiff6 (>= 4) | libtiff5 (>= 4) | libtiff4 (>= 4), inkscape(>=0.92)")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.14), libgcc1 (>= 1:3.0), qtbase6-dev(>= 6.4.2+dfsg-10),libqt6core6 (>= 6.4.2+dfsg-10), libqt6gui6 (>= 6.4.2+dfsg-10), libqt6opengl6 (>= 6.4.2+dfsg-10), libstdc++6 (>= 5), libtiff6 (>= 4) | libtiff5 (>= 4) | libtiff4 (>= 4), inkscape(>=0.92)")
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://www.gigamesh.eu")
 set(CPACK_DEBIAN_PACKAGE_SECTION "science")
 
